--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Django==5.1.2
 django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+psycopg2-binary==2.9.9
 PyJWT==2.9.0
 sqlparse==0.5.1
