--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,12 @@
 # SECURITY WARNING: don't run with the debug turned on in production!
-DEBUG=True
+DEBUG=on
 
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY=secret
+
+# Database configuration
+DB_NAME='task_manager'
+DB_USER='postgres'
+DB_PASSWORD='password'
+DB_HOST='localhost'
+DB_PORT=5432
