--- a/.env.dist
+++ b/.env.dist
@@ -10,3 +10,6 @@ DB_USER='postgres'
 DB_PASSWORD='password'
 DB_HOST='localhost'
 DB_PORT=5432
+
+JWT_ACCESS_TOKEN_LIFETIME=300
+JWT_REFRESH_TOKEN_LIFETIME=86400
